[package]
name = "mazemaze"
version = "0.1.0"
authors = ["AcrylicShrimp <led789zxpp@naver.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.4" }
gl = { git = "https://github.com/bjz/gl-rs" }
ordered-float = { version = "1.0" }
rand = { version = "0.7"}
rand_distr = { version = "0.2.2"}
sdl2 = { version = "0.34", features = ["image", "mixer", "ttf", "unsafe_textures"] }
